[package]
name = "axa"
version = "0.1.0"
edition = "2021"
default_run = "axa"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axa"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-session = "3.0.0"
axum = { version = "0.7.4", features = ["macros", "http2", "ws", "multipart"] }
axum-extra = { version = "*", features = ["typed-header"]}
reqwest = { version = "0.11", features = ["rustls-tls", "json"]}
serde = { version =  "1", features = ["derive"]}
http = "1.0.0"
oauth2 = "4.4.2"
tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde", "time", "tracing-serde"] }
